--- a/Clase 7 - CSS Batman/css/styles.css
+++ b/Clase 7 - CSS Batman/css/styles.css
@@ -1,19 +1,17 @@
-header{
+header {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
-}
-img{
-    position: absolute;
-    height: 147px;
-    width: 100px;
-    left: 670px;
-    top: 21px;
 }
 
+img {
+    height: 147px;
+    width: 100px;
+    align-self: center;
+}
+
+
 /*-----------body------------*/
-h1{
+
+h1 {
     background: #C4C4C4;
     color: #005677;
     font-family: Times New Roman;
@@ -24,7 +22,8 @@ h1{
     letter-spacing: 0.3em;
     text-align: center;
 }
-h2{
+
+h2 {
     background: #C4C4C4;
     color: #005677;
     font-family: Times New Roman;
@@ -33,10 +32,9 @@ h2{
     width: 70%;
 }
 
+
 /*-----------footer------------*/
-footer{
+
+footer {
     background: #005677
 }
-
-
-
