--- a/Clase 7 - CSS Batman/css/styles.css
+++ b/Clase 7 - CSS Batman/css/styles.css
@@ -34,7 +34,31 @@ h2 {
     font-weight: bold;
     width: 70%;
 }
-
+li{
+    font-family: Times New Roman;
+    font-size: 15px;
+}
+span p {
+    font-family: Times New Roman;
+    font-style: normal;
+    font-size: 15px;
+}
+.datosPersonales{
+    font-family: Times New Roman;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 84.69%;
+}
+.fechas{
+    font-family: Times New Roman;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+}
+article{
+    display: flex;
+}
 
 /*-----------footer------------*/
 
