--- a/Clase 7 - CSS Batman/css/styles.css
+++ b/Clase 7 - CSS Batman/css/styles.css
@@ -39,5 +39,19 @@ h2 {
 /*-----------footer------------*/
 
 footer {
-    background: #005677
+    background: #005677;
+    display: flex;
+    height: 37px;
+    justify-content: center;
+    gap: 26px;
+}
+
+.img_footer {
+    height: 20px;
+    width: 20px;
+}
+
+.title_footer {
+    margin: 0;
+    padding: 1%;
 }
