--- a/Clase 7 - CSS Batman/css/styles.css
+++ b/Clase 7 - CSS Batman/css/styles.css
@@ -71,9 +71,9 @@ article {
 footer {
     background: #005677;
     display: flex;
-    height: 37px;
     justify-content: center;
     align-items: center;
+    height: 37px;
     gap: 26px;
 }
 
@@ -84,4 +84,5 @@ footer {
 
 .title_footer {
     margin: 0;
+    color: white;
 }
